v0.11:

o Added support for fillservers (by priority)

o Added optional support for converting MacBinary files

o Now properly parsing v3.newzbin.com NZB names

v0.10:

o Multiple servers are now represented with different colors in the scroller
  output

o Added the ability to run an external handler script on an archive after
  post processing

o Now including duplicate files during par2 repair

o All filename paths in the config file now expand the "~" character to the
  user's home directory

o Added support for compressed (.zip) nzbs (thanks Freddie)

o Fixed the following IOError occurring on malformed NZBs that include multiple
<segment>s of the same segment number for a particular <file> (particularly
those NZBs created by newzleech.com):

IOError: [Errno 2] No such file or directory:
'/nzb/daemon.temp/download-tmp/hellanzb-tmp-archvie.file0172.segment0001_ENC'

o Added the ability to disconnect from the usenet server when idle (set
  antiIdle = 0)

o Fixed defineServer's bindTo option

o Added the enqueueurl RPC call (downloads the NZB at the specified URL)

o Better handling of slow NZB copies to the queue directory (won't queue the
  NZB until it's fully copied)

o Rars within rars are no longer deleted by the PostProcessor in some cases

o A few misc. lockup/stability related fixes

v0.9:

NZBLeecher:

o New feature: smartpar. hellanzb will now skip downloading extra par2/par1
files. If the post processor finds the archive requires more par data for
repair, hellanzb will automatically force the download of a minimal amount of
extra pars immediately

Daemon:
o New remote call: 'setrarpass'
(From hellanzb.py --help)

  setrarpass nzbid pass Set the rarPassword for the NZB with the specified ID

o Rar passwords are now saved in between CTRL-Cs.

o No longer leaving enqueuednewzbin/dequeued/cancelled NZBs in the TEMP_DIR

o Added the Hellanzb.UMASK option to force umask in daemon mode


v0.8:

Daemon:
